--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,83 @@
 body {
-
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  }
-  
-  nav {
+}
+
+nav {
     background-color: white;
     color: black !important;
-  }
-  
-  .nav-link {
+}
+
+.nav-link {
     color: black;
-  }
-  
-  
-  .material-icons {
+}
+
+.material-icons {
     color: black;
-  }
-  
-  .no-shadows {
+}
+
+.no-shadows {
     box-shadow: none!important;
-  }
-  
-  .button-nav {
-    margin: 30px;
+}
+
+.button-nav {
+    /* margin: 30px; */
     padding: 20px;
     background-color: #C4C4C4;
     margin-top: 0px;
-  }
-  
+}
+
+
+
+
+.MainModal {
+    background-color: whitesmoke !important;
+}
+
+.item {
+    color: black;
+    font-weight: 400;
+    letter-spacing: 2px;
+    text-decoration: none;
+    background: white;
+    padding: 20px 5px;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    border: 1px solid black;
+    height: 11vh;
+    font-size: 28px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center
+}
+
+a {
+    color: black;
+}
+
+a:hover {
+    background: rgba(238, 13, 13, 0.75);
+}
+
+.loomContent{
+    background-color: green;
+}
+
+.placeholder {
+    background-color: grey;
+    height: 450px;
+}
+
+.stationText {
+    margin: 0px 100px;
+}
+
+.placeholderList {
+    display: flex;
+}
+
+/* img{
+    height: 300px;
+    width: 400px;
+} */
