Fix styling for rows
Split out message into row and content divs, so that we can just put
border around the content and let the row use flex to justify
content right or left.

--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -41,9 +41,13 @@ a {
 
 }
 
+.messageRow {
+    display: flex;
+    flex-direction: row;
+}
+
   .message {
-  
-      min-height: 5vh;
+    min-height: 5vh;
     /* height: 30px; */
     margin: 30px;
     border: 2px solid white;
@@ -54,6 +58,9 @@ a {
     color: white;
     font-size: 20px;
   }
+  .msgLeft {
+    justify-content: flex-start;
+  }
   .msgRight {
-      justify-content: space-between;
+    justify-content: flex-end;
   }
