--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -149,7 +149,8 @@ a {
 
 
 .siteTitle{
-  font-family: Arial !important;
+  /* font-family: RubikOne !important; */
+  font-family: 'Rubik Mono One', sans-serif;
   font-weight: 900;
   font-size: 20px;
   margin-right: auto;
