--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -121,7 +121,9 @@ a {
     margin-left: auto;
   }
   .question {
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: 'Rubik Mono One', sans-serif;
+
     font-size: 28px;
     margin: 30px;
     font-weight: 900;
