--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -223,3 +223,30 @@ a {
 .rhap_container{
   box-shadow: none;
 }
+@media  (max-width: 600px) {
+  #root{
+    width: fit-content
+  }
+
+  .siteTitle{
+    font-family: 'Rubik', sans-serif;
+    font-weight: 900;
+    font-size: 11px;
+    margin-right: auto;
+    line-height: initial;
+  }
+
+  .navElement {
+    margin: 0px 20px;
+    font-size: 20px;
+    line-height: initial;
+  }
+
+  .optionText {
+    font-size: 21px;
+    margin-top: 30px;
+    justify-content: start;
+    flex-shrink: 3;
+    margin-left: 20px;
+  }
+}
