--- a/src/ChatApp.css
+++ b/src/ChatApp.css
@@ -104,7 +104,7 @@ a {
     color: white;
     font-size: 20px;
     display: flex;
-    flex-wrap: nowrap;
+    justify-content: space-between;
     flex-direction: row;
 }
 
@@ -115,10 +115,9 @@ a {
   }
 
   .iconContainer{
-    justify-content: end;
-    flex-shrink: 3;
-    align-self: flex-end;
-    margin-left: auto;
+      display: flex;
+    align-items: center;
+    justify-content: center;
   }
   .question {
     /* font-family: Arial, Helvetica, sans-serif; */
@@ -254,10 +253,16 @@ a {
   }
 }
 
+.arrow{
+    font-size: 6rem;
+}
 
+.navElementsContainer{
+display:flex
+
+}
 @media  (max-width: 600px) {
   #root{
-    width: fit-content
   }
 
   .siteTitle{
@@ -281,4 +286,65 @@ a {
     flex-shrink: 3;
     margin-left: 20px;
   }
+}
+
+/*MOBILE STYLES*/
+@media  (max-width: 500px) {
+  .testimonyLink {
+    height: 80px;
+    margin: 23px;
+    border: 2px solid white;
+    border-radius: 5px;
+    list-style-type: none;
+    /* padding: 20px; */
+    padding-right: 2px;
+    color: white;
+    font-size: 16px;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    padding: 10px;
+}
+
+.optionText{
+    margin:0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 15px
+
+}
+
+.nav-wrapper{
+    justify-content: space-between
+}
+
+.navElement{
+    margin: 0px 10px
+}
+
+.navElementsContainer{
+display:flex
+
+}
+
+
+.arrow{
+    font-size: 45px
+}
+
+    .container{
+
+        width: 100%
+    }
+
+
+  .siteTitle{
+    font-family: 'Rubik', sans-serif;
+    font-weight: 900;
+    font-size: 11px;
+    margin: 0px;
+    line-height: initial;
+  }
+
 }
